Add tree.hpp b_object.hpp Hierarchy,b_object use manage memory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(verilog_studio)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(verilog_studio main.cpp rapidjson Parse/Parse.cpp Parse/Parse.hpp Module/Module.cpp Module/Module.hpp)
+add_executable(verilog_studio main.cpp rapidjson Services/Parse/Parse.cpp Services/Parse/Parse.hpp Services/Module/Module.cpp Services/Module/Module.hpp Common/Foundation/B_Object.hpp IService.hpp Common/Supporting/Tree.hpp "Services/ Hierarchy/Hierarchy.cpp" "Services/ Hierarchy/Hierarchy.hpp")
